Adjusting and uniforming memory settings - also attempting to make Travis CI more constant